[gd_scene load_steps=7 format=2]

[ext_resource path="res://Rod/Scripts/rod.gd" type="Script" id=1]
[ext_resource path="res://Rod/Scripts/rod_line2d.gd" type="Script" id=2]
[ext_resource path="res://Rod/Scripts/handle_line2D.gd" type="Script" id=3]

[sub_resource type="Curve" id=3]
max_value = 2.0
_data = [ Vector2( 0.422535, 2 ), 0.0, 0.0, 0, 0, Vector2( 1, 1.27273 ), 0.0707347, 0.0, 0, 0 ]

[sub_resource type="CircleShape2D" id=5]

[sub_resource type="Curve" id=4]
max_value = 2.0
_data = [ Vector2( 0, 0.727273 ), 0.0, 0.0, 0, 0, Vector2( 0.521127, 1 ), 0.0600422, 0.0600422, 0, 0, Vector2( 1, 0.781818 ), 0.0, 0.0, 0, 0 ]

[node name="Rod" type="Node2D"]
script = ExtResource( 1 )
rod_length = 2.743
reel_seat_distance = 0.15
diameter_butt = 0.525
diameter_tip = 5.5
tip_segments = 9
point_load = 5
action = 50

[node name="RodLine2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 960, 0, 1040, 0, 1120, 0, 1280, 0 )
width = 30.0
width_curve = SubResource( 3 )
default_color = Color( 0, 0, 0, 1 )
texture_mode = 2
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 1
script = ExtResource( 2 )

[node name="CatchArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CatchArea"]
shape = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 1303, 5 )
current = true
zoom = Vector2( 3, 3 )

[node name="HandleLine2D" type="Line2D" parent="."]
points = PoolVector2Array( 1275, 230 )
width = 20.0
width_curve = SubResource( 4 )
default_color = Color( 0.94902, 0.92549, 0.729412, 1 )
begin_cap_mode = 2
end_cap_mode = 1
script = ExtResource( 3 )

[connection signal="on_deform" from="." to="RodLine2D" method="_on_Rod_on_deform"]
[connection signal="on_deform" from="." to="HandleLine2D" method="_on_Rod_on_deform"]
[connection signal="on_points_defined" from="." to="RodLine2D" method="_on_Rod_on_points_defined"]
[connection signal="on_points_defined" from="." to="HandleLine2D" method="_on_Rod_on_points_defined"]
[connection signal="on_rod_move" from="." to="RodLine2D" method="_on_Rod_on_rod_move"]
[connection signal="on_width_curve_defined" from="." to="RodLine2D" method="_on_Rod_on_width_curve_defined"]
[connection signal="body_entered" from="CatchArea" to="." method="_on_CatchArea_body_entered"]
